control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-invalid-cross-namespace-parent-ref.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-cross-namespace-parent-ref
  namespace: gateway-conformance-web-backend
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: web-backend
      port: 8080
